FIX: Ranking grid actions pill stretches to full card width

--- a/resources/assets/admin/styles/editor.scss
+++ b/resources/assets/admin/styles/editor.scss
@@ -1906,6 +1906,7 @@ mark {
 }
 
 .ff-ranking-preview--grid .ff-ranking-preview__actions {
+  align-self: flex-end;
   justify-content: flex-end;
   margin-top: auto;
 }
